welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:3: error: identifier expected but integer literal found.
	var max:Int =-100
                      ^